# PipeShellX

./: .gitignore  CMakeLists.txt  README.md
docs/: architecture.md  authentication.md  deployment.md  distributed_execution.md  ipc_design.md  process_management.md  security.md  system_flow.md  testing.md
include/: client_config.hpp  client_manager.hpp  command_executor.hpp  ipc_engine.h  logger.hpp  process_manager.hpp  session_manager.hpp  ssh_auth.hpp  terminal_client.hpp
src/: CMakeLists.txt  client_config.cpp  client_manager.cpp  command_executor.cpp  ipc_engine.cpp  logger.cpp  main.cpp  process_manager.cpp  session_manager.cpp  ssh_auth.cpp  terminal_client.cpp
tests/: CMakeLists.txt  test_client_config.cpp  test_ipc.cpp  test_prcoess_manager.cpp  test_ssh_auth.cpp
